# django_chat

./: .gitignore  pyproject.toml
chat/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/: chat.html  home.html
django_chat/: asgi.py  settings.py  urls.py
static/css/: style.css
static/js/: chat_script.js  home_script.js  sock.js
